--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ ENDIF()
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(lambda ${FlexOutput} ${BisonOutput} expression.cpp function.cpp application.cpp id.cpp freevariables.cpp)
+add_executable(lambda ${FlexOutput} ${BisonOutput} expression.cpp function.cpp application.cpp id.cpp ids.cpp)
